--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-# Docker Compose para execução completa
-
+# Full-stack services for Exoplanet Detector (backend API, frontend UI, and monitoring)
 services:
-  # API Principal
   exoplanet-api:
+    # Python FastAPI backend
     build:
       context: .
       dockerfile: Dockerfile
@@ -15,13 +14,10 @@ services:
       - LOG_LEVEL=INFO
       - ENABLE_MODEL_CACHING=true
       - CACHE_TTL=3600
-      - REDIS_URL=redis://redis:6379/0
       - MODEL_FULL_PATH=/app/models/exoplanet_model.keras
+      - PYTHONPATH=/app/src
     volumes:
-      - ./logs:/app/logs
       - ./models:/app/models
-      - ./cache:/app/cache
-      - ./frontend:/app/frontend:ro
     depends_on:
       - redis
     networks:
@@ -33,8 +29,8 @@ services:
       retries: 3
       start_period: 40s
 
-  # Cache Redis (opcional)
   redis:
+    # Caching backend for Celery/tasks (optional)
     image: redis:7-alpine
     container_name: exoplanet-redis
     restart: unless-stopped
@@ -51,8 +47,8 @@ services:
       timeout: 5s
       retries: 3
 
-  # Monitoramento Prometheus (opcional)
   prometheus:
+    # Metrics scraper (optional)
     image: prom/prometheus:latest
     container_name: exoplanet-prometheus
     restart: unless-stopped
@@ -70,13 +66,13 @@ services:
     depends_on:
       - exoplanet-api
 
-  # Dashboard Grafana (opcional)
   grafana:
+    # Metrics dashboards (optional)
     image: grafana/grafana:latest
     container_name: exoplanet-grafana
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin123
     volumes:
@@ -89,36 +85,37 @@ services:
     networks:
       - exoplanet-network
 
-  # Load Balancer Nginx (opcional)
-  nginx:
-    image: nginx:alpine
-    container_name: exoplanet-nginx
+  frontend:
+    # React + Vite build served by Nginx
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    container_name: exoplanet-frontend
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - exoplanet-api
     networks:
       - exoplanet-network
 
-  # Worker para tarefas em background (opcional)
   worker:
+    # Celery worker calling the API (optional)
     build:
       context: .
       dockerfile: Dockerfile
     container_name: exoplanet-worker
     restart: unless-stopped
-    command: celery -A tasks worker --loglevel=info --concurrency=2
+    command: celery -A src.backend.tasks worker --loglevel=info --concurrency=2
     environment:
       - LOG_LEVEL=INFO
       - REDIS_URL=redis://redis:6379/0
       - API_BASE_URL=http://exoplanet-api:8000
+      - PYTHONPATH=/app/src
     volumes:
-      - ./logs:/app/logs
       - ./models:/app/models
     depends_on:
       - redis
@@ -137,6 +134,3 @@ volumes:
 networks:
   exoplanet-network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
